--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,5 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+YANDEX_WEATHER_KEY=0cea0d74-9ab9-432a-9846-8b9aeddd6ab6
